--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.12",
+    "date-fns": "^2.29.3",
     "next": "12.3.1",
-    "react": "18.2.0",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-date-range": "^1.4.0",
     "react-dom": "18.2.0",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
@@ -19,6 +22,7 @@
     "autoprefixer": "^10.4.12",
     "eslint": "8.25.0",
     "eslint-config-next": "12.3.1",
+    "eslint-plugin-react": "^7.31.10",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.1.8"
   }
